--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -48,16 +48,16 @@
             <xpath expr="//tree/field[@name='name']" position="after">
 
                 <!-- Planta: distintos colores para cada opción -->
-                <field name="x_planta"
-                       widget="badge"
-                       decoration-danger="x_planta == 'Planta 1'"
-                       decoration-warning="x_planta == 'Planta 2'"
-                       decoration-success="x_planta == 'Planta 3'"
-                       decoration-info="x_planta == 'Planta 4'"
-                       decoration-info="x_planta == 'Planta 5'"
-                       decoration-muted="x_planta == 'Planta 6'"
-                       decoration-bf="x_planta == 'Planta 7'"
-                       />
+              <field name="x_planta"
+                    widget="badge"
+                    decoration-danger="x_planta == 'Planta 1'"
+                    decoration-warning="x_planta == 'Planta 2'"
+                    decoration-success="x_planta == 'Planta 3'"
+                    decoration-info="x_planta in ('Planta 4','Planta 5')"
+                    decoration-muted="x_planta == 'Planta 6'"
+                    decoration-bf="x_planta == 'Planta 7'"
+                />
+
 
                 <!-- Ubicación: un color fijo (info) -->
                 <field name="x_ubicacion"
