--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -53,8 +53,8 @@
                     decoration-danger="x_planta == 'Planta 1'"
                     decoration-warning="x_planta == 'Planta 2'"
                     decoration-success="x_planta == 'Planta 3'"
-                    decoration-info="x_planta in ('Planta 4','Planta 5')"
-                    decoration-muted="x_planta == 'Planta 6'"
+                    decoration-muted="x_planta in ('Planta 4','Planta 5')"
+                    decoration-info="x_planta == 'Planta 6'"
                     decoration-bf="x_planta == 'Planta 7'"
                 />
 
