--- a/views/hr_employee_views.xml
+++ b/views/hr_employee_views.xml
@@ -17,6 +17,8 @@
                     <field name="x_ubicacion"/>
                     <field name="x_fecha_ingreso"/>
                     <field name="x_antiguedad"/>
+                    <field name="x_antiguedad_meses"/>
+                    <field name="x_antiguedad_anios"/>
                     <field name="x_fecha_baja"/>
                 </group>
             </xpath>
@@ -61,6 +63,14 @@
             <field name="x_antiguedad"
                    widget="badge"
                    decoration-warning="1"
+            />
+            <field name="x_antiguedad_meses"
+                widget="badge"
+                decoration-warning="1"
+            />
+            <field name="x_antiguedad_anios"
+                widget="badge"
+                decoration-warning="1"
             />
             <field name="x_fecha_baja"
                    widget="badge"
